fix: courses scrollbar visibility

--- a/src/home/style.scss
+++ b/src/home/style.scss
@@ -10,7 +10,7 @@
 }
 
 .mycourses-body {
-  overflow-x: scroll;
+  overflow-x: auto;
 
   > label {
     display: block;
